manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-public-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-public-backend
  template:
    metadata:
      labels:
        app: lms-public-backend
    spec:
      containers:
        - name: lms-public-backend-container
          image: ${LMS_PUBLIC_BACKEND_IMAGE}
          ports:
            - containerPort: 8080
